# patchwork

./: .gitignore  .vscodeignore  README.md  claude-plugins  package.json  test_shell.pw
.github/workflows/: mdbook.yml
.sparkle-space/: working-memory.json
.sparkle-space/checkpoints/: checkpoint-2025-11-03-213148.md  checkpoint-2025-11-04-050636.md  checkpoint-2025-11-04-064537.md  checkpoint-2025-11-04-070512.md  checkpoint-2025-11-04-085128.md  checkpoint-2025-11-04-145706.md  checkpoint-2025-11-04-171531.md  checkpoint-2025-11-04-180221.md  checkpoint-2025-11-05-092945.md  checkpoint-2025-11-05-164822.md  checkpoint-2025-11-06-025408.md  checkpoint-2025-11-06-050728.md  checkpoint-2025-11-06-052454.md  checkpoint-2025-11-06-184307.md  checkpoint-2025-11-10-181318.md  checkpoint-2025-11-10-225415.md  checkpoint-2025-11-11-165248.md  checkpoint-2025-11-11-214831.md  checkpoint-2025-11-11-221630.md  (+13 more)
archive/: arch-mdbook-design.md
crates/patchwork-eval/: Cargo.toml
crates/patchwork-eval/src/: error.rs  eval.rs  interpreter.rs  lib.rs  runtime.rs  value.rs
crates/patchwork-lexer/: Cargo.toml  lexer.alex
crates/patchwork-lexer/src/: lib.rs  main.rs
crates/patchwork-parser/: Cargo.toml
crates/patchwork-parser/src/: adapter.rs  ast.rs  ast_dump.rs  lib.rs  patchwork.lalrpop  token.rs
docs/: arch-mdbook-mvp-plan.md  compiler-implementation-plan.md  lexer-implementation-plan.md  parser-implementation-plan.md  parser-workarounds.md  patchwork-acp-design.md  patchwork-acp-implementation-plan.md  phase10-completion-summary.md  phase6.5-completion-summary.md  phase8-completion-summary.md  phase9-completion-summary.md  runtime-design.md  zed-extension-dev.md  zed-extension-plan.md
examples/: phase3-session-demo.pw  phase4-prompt-demo.pw  simple-test.pw
scripts/: run-lsp.sh
test/: phase2_comprehensive.pw  phase2_simpler.pw
tree-sitter/: grammar.js
(+42 files in other folders)
