[package]
name = "patchwork-parser"
version = "0.1.0"
edition = "2021"
description = "Parser for the Patchwork agentic scripting language"
license = "MIT OR Apache-2.0"
repository = "https://github.com/patchwork-lang/patchwork"

[dependencies]
patchwork-lexer = { version = "0.1.0", path = "../patchwork-lexer" }
lalrpop-util = { version = "0.21", features = ["lexer"] }
try-next = "0.4"
parlex = "0.3.0"

[build-dependencies]
lalrpop = "0.21"

[dev-dependencies]
# Will add test dependencies as needed
